--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 /* ------------------------------------------------------------------------ */
 class.Einzahlungsschein.php
-Copyright (C) 2010  Manuel Reinhard
+Copyright (C) 2010-2011  Manuel Reinhard
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -24,5 +24,5 @@ Beware, known for being one sandwich short of a picnic.
 
 /* ------------------------------------------------------------------------ */
 
-For examples check:
+For examples and documentation check:
 http://sprain.ch/blog/downloads/class-esr-besr-einzahlungsschein-php/
