--- a/README
+++ b/README
@@ -1,28 +1,40 @@
+/* ------------------------------------------------------------------------ */          
+/* 	class.einzahlungsschein.php												*/
+/*	Eine Klasse um Einzahlungsscheine mit ESR-Nummer als PDF zu erstellen.
+/*  A class to create Swiss payment slips with ESR number in pdf format.
 /* ------------------------------------------------------------------------ */
-class.Einzahlungsschein.php
-Copyright (C) 2010-2011  Manuel Reinhard
+/* Manuel Reinhard, manu@sprain.ch
+/* Twitter: @sprain
+/* Web: www.sprain.ch
+/* ------------------------------------------------------------------------ 
+	Copyright (C) 2010-2011  Manuel Reinhard
+	
+	This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
 
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
 
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+/* ------------------------------------------------------------------------ 
+    Thanks to:
+    http://www.smoke8.net/ for public designs of Einzahlungsscheinen
+    http://www.developers-guide.net/forums/5431,modulo10-rekursiv for Modulo10 function
+    http://ansuz.sooke.bc.ca/software/ocrb.php for OCRB font
+    http://blog.fruit-lab.de/fpdf-font-converter/ for FPDF font converter
+    http://www.fpdf.de/ for the pdf class
+    My mom, my dad and all my fans out there… you made me to who I am. Love you all!
+    *breaks down, has to be carried from stage*
 /* ------------------------------------------------------------------------ */
-
-Manuel Reinhard, manu@sprain.ch
-Twitter: @sprain
-Web: www.sprain.ch
-Beware, known for being one sandwich short of a picnic.
-
-/* ------------------------------------------------------------------------ */
-
-For examples and documentation check:
-http://sprain.ch/blog/downloads/class-esr-besr-einzahlungsschein-php/
+/* History:
+/* 2011/05/31 - Manuel Reinhard - improved behaviour of $this->ezs_bankingCustomerIdentification, minor bugfixes
+/* 2011/02/14 - Manuel Reinhard - added project to Github, again
+/* 2010/05/06 - Manuel Reinhard - added project to Github
+/* 2010/05/06 - Manuel Reinhard - corrected position on bottom line after feedback from bank
+/* 2010/04/24 - Manuel Reinhard - when it all started
+/* ------------------------------------------------------------------------ */  
